# theia-player

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yaml
navitui/: api.py  app.py  config.py  discord_rpc.py  models.py  mpris.py  player.py  playqueue.py  screens.py  widgets.py
ricekit/: __init__.py  app.py  fx.py  gallery.py  icons.py  modals.py  palette.py  storage.py  themes.py  widgets.py
tests/: test_art_cmyk.py  test_autoplay_diversity.py  test_bindings_complete.py  test_cover_art.py  test_equalizer.py  test_filter_songs.py  test_focus_filter.py  test_models.py  test_moods.py  test_mpris.py  test_player_audio_driver.py  test_playqueue.py  test_roon_features.py  test_shuffle_everything.py  test_signal_path.py  test_spotlight.py  test_terminal_probe.py
theiaplayer/: __init__.py  __main__.py  anim.py  api.py  app.py  art.py  config.py  discord_rpc.py  models.py  mpris.py  nowplaying_mac.py  player.py  playqueue.py  screens.py  terminal_probe.py  widgets.py
tools/: demo.py  package_mac.py  screenshots.py  shots.sh
