[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "theia-player"
version = "0.3.0"
description = "A fast, animated TUI player for Navidrome — cover art in the terminal, playback via mpv, themes via ricekit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Mera", email = "rodrigo@theia.cl" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "python-mpv>=1.0",
    "pillow>=10",
    "textual-image>=0.8",
    "ricekit @ git+https://github.com/Gheat1/ricekit",
]
keywords = ["navidrome", "subsonic", "music", "player", "tui", "terminal", "textual", "mpv"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.urls]
Homepage = "https://github.com/rodmera/theia-player"
Repository = "https://github.com/rodmera/theia-player"
Issues = "https://github.com/rodmera/theia-player/issues"

[project.scripts]
theia-player = "navitui:main"

[tool.setuptools]
packages = ["navitui"]
