[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "theia-player"
version = "1.10.0"
description = "A fast, animated TUI player for Navidrome — cover art in the terminal, playback via mpv, themes via ricekit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Mera", email = "rodrigo@theia.cl" }]
requires-python = ">=3.11"
keywords = ["navidrome", "subsonic", "music", "player", "tui", "terminal", "textual", "mpv"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "python-mpv>=1.0",
    "pillow>=10",
    "textual-image>=0.8",
]

[project.optional-dependencies]
mpris   = ["dbus-python; sys_platform != 'darwin'"]
discord = ["pypresence"]
mac     = ["pyobjc-framework-MediaPlayer; sys_platform == 'darwin'"]
full    = [
    "dbus-python; sys_platform != 'darwin'",
    "pypresence",
    "pyobjc-framework-MediaPlayer; sys_platform == 'darwin'"
]

[project.urls]
Homepage = "https://github.com/rodmera/theia-player"
Repository = "https://github.com/rodmera/theia-player"
Issues = "https://github.com/rodmera/theia-player/issues"

[project.scripts]
theia-player = "theiaplayer:main"

[tool.setuptools]
packages = ["theiaplayer", "ricekit"]

# Mirror pyrightconfig.json so the pyright-based LSP server (which ignores
# pyrightconfig.json in some setups) also picks up the relaxed settings.
# These are DX-only — the runtime and tests don't depend on them.
[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]
typeCheckingMode = "off"
reportMissingTypeStubs = false
reportUndefinedVariable = "none"
reportMissingImports = "none"
reportOptionalMemberAccess = "none"
reportOptionalIterable = "none"
reportOptionalContains = "none"
reportOptionalOperand = "none"
reportTypedDictNotRequiredAccess = "none"
exclude = ["**/node_modules", "**/__pycache__", ".venv", "ricekit", "theia_player.egg-info", "tools"]

# Configure `ty` (Astral's Python type checker, used by the pi-lsp
# extension by default) to silence the same noise that pyright ignores:
# libraries without stubs (textual, ricekit, dbus-python, textual-image)
# plus the optional/None-union narrowing that's hard to express in plain
# dataclasses. Runtime and tests are unaffected — DX-only.
[tool.ty.src]
include = ["theiaplayer", "tests"]
exclude = ["ricekit", "tools"]

[tool.ty.rules]
"not-iterable"             = "ignore"
"unresolved-attribute"     = "ignore"
"unresolved-import"        = "ignore"
"unresolved-reference"     = "ignore"
"invalid-argument-type"    = "ignore"
"no-matching-overload"     = "ignore"
"invalid-assignment"       = "ignore"
"unsupported-base"         = "ignore"
